# sigil-solver

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  main.py  mypy.ini  piece_analyzer.py  provider.py  pyproject.toml  recognizer.py  requirements.txt  vercel.json
sigil/core/: async_typer.py  logging.py
sigil/core/config/: settings.py
sigil/core/providers/: configs.py  factory.py  services.py
sigil/infrastructure/: exceptions.py
sigil/main/api/: app.py  factory.py  native.py
sigil/main/cli/: app.py  factory.py
sigil/presentation/: apis.py  base_response.py  exceptions.py
sigil/presentation/routers/v1/captchas/: routers.py  views.py
sigil/schemas/: requests.py  responses.py
sigil/services/: recognizer.py
tests/: piece_analyzer.py
